kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fleact
  labels:
    name: fleact
