kubernetes/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: fleact
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: fleact
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          image: "fleact_backend:v1"
          ports:
            - name: http
              containerPort: 5000
