kubernetes/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: fleact
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: fleact
        tier: frontend
        track: stable
    spec:
      containers:
      - name: frontend
        image: "fleact_frontend:v1"
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
