kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fleact
spec:
  selector:
    matchLabels:
      app: fleact
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: fleact
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          image: "039706656811.dkr.ecr.us-east-2.amazonaws.com/fleact_backend:latest"
          ports:
            - name: http
              containerPort: 5000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fleact
  labels:
    app: fleact
spec:
  selector:
    app: fleact
    tier: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: http
