kubernetes/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: fleact
spec:
  selector:
    app: fleact
    tier: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: http
