kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fleact
spec:
  selector:
    matchLabels:
      app: fleact
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: fleact
        tier: frontend
        track: stable
    spec:
      containers:
      - name: frontend
        image: "039706656811.dkr.ecr.us-east-2.amazonaws.com/fleact_frontend:latest"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fleact
spec:
  selector:
    app: fleact
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
